# pchem-cg50

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-cg50.yml
include/: formula.h  greeksymbols.h  input.h  menu.h  navigation.h  pchem.h  render.h  topics.h
src/: formula.c  greeksymbols.c  input.c  main.c  menu.c  navigation.c  render.c  topics.c
