# =============================================================================
# PChem Add-in for CASIO fx-CG50
# Build system: fxSDK + gint (modern Linux-based toolchain)
#
# ARCHITECTURAL DECISION: Modular multi-file layout
# ---------------------------------------------------
# The fxSDK + gint environment uses a standard CMake build, which natively
# supports multiple translation units. A modular layout is best practice for
# several reasons:
#   1. The SH4 compiler benefits from smaller compilation units (faster
#      incremental rebuilds on the ~30 MHz CPU target).
#   2. Clean separation of concerns: menu logic, rendering engine, and topic
#      content can evolve independently.
#   3. The Eigenmath and Utilities add-ins — the two most sophisticated
#      open-source CG50 projects — both use modular file layouts.
#   4. Future contributors (common in Cemetech community projects) can work
#      on isolated modules without merge conflicts.
#
# A single main.c is acceptable ONLY for trivial demos. For a multi-screen
# app with a 2D math renderer, modular is unambiguously correct.
# =============================================================================

cmake_minimum_required(VERSION 3.15)
project(PChem C)

include(GenerateG3A)
include(Fxconv)

# -- Locate the gint kernel library --
# This loads FindGint.cmake (installed by gint into the fxSDK's CMake
# module path) and creates the Gint::Gint imported target.  Without
# this call, target_link_libraries(... Gint::Gint) fails because the
# target doesn't exist yet.
#
# The version constraint (2.1) ensures we have a gint with the modern
# display/keyboard API our code depends on.  REQUIRED makes CMake stop
# immediately with a clear error if gint isn't installed.
find_package(Gint 2.1 REQUIRED)

# -- Source files (modular architecture) --
set(SOURCES
    src/main.c          # Entry point, top-level state machine
    src/menu.c          # Scrolling menu system and navigation
    src/render.c        # 2D math rendering: AST, layout, draw
    src/topics.c        # Topic screen content and dispatch
    src/input.c         # Keyboard event handling abstraction
)

set(ASSETS
    # (icons and bitmap assets will go here later)
)

# Guard: fxconv_declare_assets() errors if called with zero arguments.
# Only invoke it when ASSETS is non-empty.
if(ASSETS)
    fxconv_declare_assets(${ASSETS})
endif()

add_executable(pchem ${SOURCES} ${ASSETS})

# Link against gint (the freestanding kernel for fx-CG50)
target_include_directories(pchem PRIVATE include)
target_compile_options(pchem PRIVATE -Wall -Wextra -Os)
target_link_libraries(pchem Gint::Gint)

# -- Diagnostic: verify fxgxa is available for g3a generation --
# GenerateG3A.cmake internally needs fxgxa.  If it can't find it,
# it silently skips the POST_BUILD step and no .g3a is produced.
find_program(FXGXA_CHECK fxgxa)
if(FXGXA_CHECK)
    message(STATUS "fxgxa found at: ${FXGXA_CHECK}")
else()
    message(WARNING "fxgxa NOT found in PATH — .g3a will not be generated by CMake. "
        "The workflow will fall back to manual fxgxa invocation.")
endif()

# -- Diagnostic: verify icon files exist --
set(ICON_UNS "${CMAKE_CURRENT_SOURCE_DIR}/assets/icon-uns.png")
set(ICON_SEL "${CMAKE_CURRENT_SOURCE_DIR}/assets/icon-sel.png")
if(EXISTS "${ICON_UNS}" AND EXISTS "${ICON_SEL}")
    message(STATUS "Icons found: ${ICON_UNS}")
else()
    message(WARNING "Icon files not found at assets/icon-{uns,sel}.png — "
        "g3a packaging may fail.")
endif()

# Generate the .g3a add-in binary.
# Uses absolute paths for icons to avoid path resolution ambiguity
# between CMAKE_CURRENT_SOURCE_DIR and CMAKE_CURRENT_BINARY_DIR.
generate_g3a(TARGET pchem
    OUTPUT "PChem.g3a"
    NAME "PChem"
    ICONS "${ICON_UNS}" "${ICON_SEL}"
)
