# =============================================================================
# PChem Add-in for CASIO fx-CG50
# Build system: fxSDK + gint (modern Linux-based toolchain)
#
# v2 ADDITIONS:
#   - src/navigation.c (global keyword/symbol navigator)
#   - src/topics.c has been rewritten; retains the same public API
# =============================================================================

cmake_minimum_required(VERSION 3.15)
project(PChem C)

include(GenerateG3A)
include(Fxconv)

# -- Locate the gint kernel library --
find_package(Gint 2.1 REQUIRED)

# -- Source files (modular architecture) --
set(SOURCES
    src/main.c          # Entry point, state machine
    src/menu.c          # Generic scrolling menu
    src/render.c        # 2D math rendering: AST, layout, draw
    src/topics.c        # Topic content, submenus, content views
    src/navigation.c    # Global keyword/symbol navigator
    src/input.c         # Keyboard event handling
)

set(ASSETS
    # (icons and bitmap assets will go here later)
)

if(ASSETS)
    fxconv_declare_assets(${ASSETS})
endif()

add_executable(pchem ${SOURCES} ${ASSETS})

target_include_directories(pchem PRIVATE include)
target_compile_options(pchem PRIVATE -Wall -Wextra -Os)
target_link_libraries(pchem Gint::Gint)

# -- Diagnostic: verify fxgxa is available for g3a generation --
find_program(FXGXA_CHECK fxgxa)
if(FXGXA_CHECK)
    message(STATUS "fxgxa found at: ${FXGXA_CHECK}")
else()
    message(WARNING "fxgxa NOT found in PATH - .g3a will not be generated by CMake. "
        "The workflow will fall back to manual fxgxa invocation.")
endif()

# -- Diagnostic: verify icon files exist --
set(ICON_UNS "${CMAKE_CURRENT_SOURCE_DIR}/assets/icon-uns.png")
set(ICON_SEL "${CMAKE_CURRENT_SOURCE_DIR}/assets/icon-sel.png")
if(EXISTS "${ICON_UNS}" AND EXISTS "${ICON_SEL}")
    message(STATUS "Icons found: ${ICON_UNS}")
else()
    message(WARNING "Icon files not found at assets/icon-{uns,sel}.png - "
        "g3a packaging may fail.")
endif()

# Generate the .g3a add-in binary
generate_g3a(TARGET pchem
    OUTPUT "PChem.g3a"
    NAME "PChem"
    ICONS "${ICON_UNS}" "${ICON_SEL}"
)
